--- a/sprintClient.css
+++ b/sprintClient.css
@@ -37,6 +37,9 @@
     padding: 10px;
     box-sizing: border-box;
 }
+#consoleDiv > .sprint-info > input {
+    width: 45%;
+}
 .supplies-infotitle {
     margin-bottom: 10px;
     padding: 0;
