Started making extensions to see what is needed

--- a/sprintClient.css
+++ b/sprintClient.css
@@ -28,7 +28,8 @@
     text-decoration: underline;
 }
 .center-vert {
-    margin-top: 5px;
+    padding-top: 2px;
+    
 }
 .sprint-info {
     min-height: 50%;
